Bug 118383 - Vertically align `controlsContainer` inside `videocontrols` parent div. r=nathan.chang

--- a/b2g/chrome/content/touchcontrols.css
+++ b/b2g/chrome/content/touchcontrols.css
@@ -5,10 +5,12 @@
 @namespace url("http://www.w3.org/1999/xhtml");
 
 .videocontrols {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   writing-mode: horizontal-tb;
   width: 100%;
   height: 100%;
-  display: inline-block;
   overflow: hidden;
 
   direction: ltr;
@@ -106,9 +108,12 @@
   cursor: none;
 }
 
-.controlsContainer,
 .progressContainer {
   position: relative;
+}
+
+.controlsContainer {
+  width: 100%;
 }
 
 .stackItem {
